# saunaikitai-analysis

./: .gitignore  README.md  ci.ipynb  main.py  pyproject.toml  sauna_ci.ipynb  sauna_csv.py  sauna_eda.ipynb  sauna_random_forest.ipynb
src/: README.md
